force-app/main/default/objects/Referral_Status_History__c/Referral_Status_History__c.object-meta.xml
<CustomObject>
    <description>Object used to maintain an audit trail of status changes for employee referrals.</description>
    <label>Referral Status History</label>
    <nameField>
        <displayFormat>HST-{00000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Status Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>