force-app/main/default/objects/Referral_Status_History__c/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <description>Optional explanation for why the status was changed</description>
    <inlineHelpText>Provide a brief reason for this status change if applicable</inlineHelpText>
    <label>Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>