force-app/main/default/objects/Referral_Status_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who made this status change</description>
    <inlineHelpText>The person who changed the referral status</inlineHelpText>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Status_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>