force-app/main/default/objects/Referral_Status_History__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <description>The date and time when the status change occurred</description>
    <inlineHelpText>The exact date and time when this status change was made</inlineHelpText>
    <label>Changed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>