force-app/main/default/objects/Referral_Status_History__c/fields/Employee_Referral__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral__c</fullName>
    <description>Links this status history record to its parent Employee Referral</description>
    <inlineHelpText>The referral this status change belongs to</inlineHelpText>
    <label>Employee Referral</label>
    <referenceTo>Employee_Referral__c</referenceTo>
    <relationshipLabel>Referral Status History</relationshipLabel>
    <relationshipName>Referral_Status_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>