force-app/main/default/objects/Referral_Status_History__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>The status value after the change occurred</description>
    <inlineHelpText>The new status of the referral after this change</inlineHelpText>
    <label>New Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>