force-app/main/default/objects/Referral_Status_History__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>The status value before the change occurred</description>
    <inlineHelpText>The previous status of the referral before this change</inlineHelpText>
    <label>Previous Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>